# festival-together

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  render.yaml
.github/: CODEOWNERS  pull_request_template.md
.github/scripts/: review_pr.py
.github/workflows/: ci.yml  claude-review.yml
apps/mobile/: .env.example  App.js  README.md  app.json  eas.json  eslint.config.js  (+2 more)
docs/: feature-ideas.md  implementation-plan.md  progress.md  release-runbook.md  review-workflow.md  security-guardrails.md  v1-spec.md
infra/: .env.example  docker-compose.yml
scripts/: check.sh
services/api/: .env.example  Dockerfile  README.md  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 001_baseline_schema.py  002_add_festival_days.py  003_add_canonical_sets_source.py
services/api/app/: main.py
services/api/app/api/: canonical.py  groups.py  meta.py  personal.py  schedule.py  sets.py
services/api/app/core/: auth.py  colors.py  config.py  db.py  db_adapter.py  image_utils.py  llm_parser.py  parser.py  vision_client.py
services/api/app/data/presets/: coachella_2026_w1_friday.json  coachella_2026_w1_saturday.json  coachella_2026_w1_sunday.json  coachella_2026_w2_friday.json  coachella_2026_w2_saturday.json  coachella_2026_w2_sunday.json  presets_manifest.json
services/api/app/schemas/: canonical.py  common.py  groups.py  personal.py
services/api/tests/: conftest.py  test_canonical.py  test_groups.py  test_health.py  test_image_utils.py  test_llm_parser.py  test_personal.py  test_schedule.py  test_sets.py  test_vision_client.py
(+70 files in other folders)
