[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coachella-api"
version = "0.1.0"
description = "API for Coachella Group Planner"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "pydantic-settings>=2.10.0",
  "httpx>=0.28.0",
  "python-multipart>=0.0.20",
  "Pillow>=11.0.0",
  "psycopg2-binary>=2.9.0",
  "anthropic>=0.40.0",
  "alembic>=1.13.0",
  "SQLAlchemy>=2.0.0"
]

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "httpx>=0.28.0",
  "ruff>=0.12.0",
  "mypy>=1.16.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["app"]
